drm_gpu: don't bother trying to assign a crtc to a connector that isn't connected

BUG: 457002